Add font family to center class

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
 .center {
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 .purple {
     color: purple;
+}
+.medium-big {
+    font-size: 20px;
 }
 
