--- a/styles.css
+++ b/styles.css
@@ -17,4 +17,16 @@
 .background {
     background-color: papayawhip;
 }
+.img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 
+    height: 550px;
+}
+li {
+    list-style: none;
+    padding: 5px;
+    display: inline-block;
+    }
