--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ li {
     padding: 5px;
     display: inline-block;
     font-size: 16px;
+    background-color: rgb(225, 243, 243);
     }
 h3 {
     font-weight: 800;
